parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    READ
    WRITE

Grammar

Rule 0     S' -> Init
Rule 1     Init -> Cmds
Rule 2     Cmds -> Cmd Cmds
Rule 3     Cmds -> <empty>
Rule 4     Cmd -> Cmd_If
Rule 5     Cmd -> Cmd_If_Else
Rule 6     Cmd -> Cmd_While
Rule 7     Cmd -> Cmd_For
Rule 8     Cmd -> Cmd_Write
Rule 9     Cmd_Write -> PRINT ( Exp )
Rule 10    Cmd_Read -> INPUT ( ID )
Rule 11    Cmd_Read -> INPUT ( ID [ Exp ] )
Rule 12    Cmd -> Cmd_Read
Rule 13    Cmd -> Atrib ;
Rule 14    Atrib -> Atrib_var
Rule 15    Atrib -> Atrib_arr
Rule 16    Atrib_var -> ID = Exp
Rule 17    Atrib_arr -> ID [ Exp ] = Exp
Rule 18    Cmd -> VARS
Rule 19    VARS -> Decl VARS
Rule 20    VARS -> <empty>
Rule 21    Decl -> VAR IdList ;
Rule 22    Decl -> ARR ID [ NUM ] ;
Rule 23    IdList -> ID
Rule 24    IdList -> ID , IdList
Rule 25    Cmd_If -> IF ( Cond ) THEN { Cmds }
Rule 26    Cmd_If_Else -> IF ( Cond ) THEN { Cmds } ELSE { Cmds }
Rule 27    Cmd_While -> WHILE ( Cond ) DO { Cmds }
Rule 28    Cmd_For -> FOR ( Atrib ; Cond ; Atrib ) DO { Cmds }
Rule 29    Exp -> Exp + Exp
Rule 30    Exp -> Exp - Exp
Rule 31    Exp -> Exp * Exp
Rule 32    Exp -> Exp / Exp
Rule 33    Exp -> Exp % Exp
Rule 34    Exp -> Factor
Rule 35    Factor -> NUM
Rule 36    Factor -> ID
Rule 37    Factor -> ID [ Exp ]
Rule 38    Factor -> ( Exp )
Rule 39    Cond -> NOT Cond
Rule 40    Cond -> Cond AND Cond
Rule 41    Cond -> Cond OR Cond
Rule 42    Cond -> Exp > Exp
Rule 43    Cond -> Exp > = Exp
Rule 44    Cond -> Exp < Exp
Rule 45    Cond -> Exp < = Exp
Rule 46    Cond -> Exp = = Exp
Rule 47    Cond -> Exp ! = Exp

Terminals, with rules where they appear

!                    : 47
%                    : 33
(                    : 9 10 11 25 26 27 28 38
)                    : 9 10 11 25 26 27 28 38
*                    : 31
+                    : 29
,                    : 24
-                    : 30
/                    : 32
;                    : 13 21 22 28 28
<                    : 44 45
=                    : 16 17 43 45 46 46 47
>                    : 42 43
AND                  : 40
ARR                  : 22
DO                   : 27 28
ELSE                 : 26
FOR                  : 28
ID                   : 10 11 16 17 22 23 24 36 37
IF                   : 25 26
INPUT                : 10 11
NOT                  : 39
NUM                  : 22 35
OR                   : 41
PRINT                : 9
READ                 : 
THEN                 : 25 26
VAR                  : 21
WHILE                : 27
WRITE                : 
[                    : 11 17 22 37
]                    : 11 17 22 37
error                : 
{                    : 25 26 26 27 28
}                    : 25 26 26 27 28

Nonterminals, with rules where they appear

Atrib                : 13 28 28
Atrib_arr            : 15
Atrib_var            : 14
Cmd                  : 2
Cmd_For              : 7
Cmd_If               : 4
Cmd_If_Else          : 5
Cmd_Read             : 12
Cmd_While            : 6
Cmd_Write            : 8
Cmds                 : 1 2 25 26 26 27 28
Cond                 : 25 26 27 28 39 40 40 41 41
Decl                 : 19
Exp                  : 9 11 16 17 17 29 29 30 30 31 31 32 32 33 33 37 38 42 42 43 43 44 44 45 45 46 46 47 47
Factor               : 34
IdList               : 21 24
Init                 : 0
VARS                 : 18 19

Parsing method: LALR

state 0

    (0) S' -> . Init
    (1) Init -> . Cmds
    (2) Cmds -> . Cmd Cmds
    (3) Cmds -> .
    (4) Cmd -> . Cmd_If
    (5) Cmd -> . Cmd_If_Else
    (6) Cmd -> . Cmd_While
    (7) Cmd -> . Cmd_For
    (8) Cmd -> . Cmd_Write
    (12) Cmd -> . Cmd_Read
    (13) Cmd -> . Atrib ;
    (18) Cmd -> . VARS
    (25) Cmd_If -> . IF ( Cond ) THEN { Cmds }
    (26) Cmd_If_Else -> . IF ( Cond ) THEN { Cmds } ELSE { Cmds }
    (27) Cmd_While -> . WHILE ( Cond ) DO { Cmds }
    (28) Cmd_For -> . FOR ( Atrib ; Cond ; Atrib ) DO { Cmds }
    (9) Cmd_Write -> . PRINT ( Exp )
    (10) Cmd_Read -> . INPUT ( ID )
    (11) Cmd_Read -> . INPUT ( ID [ Exp ] )
    (14) Atrib -> . Atrib_var
    (15) Atrib -> . Atrib_arr
    (19) VARS -> . Decl VARS
    (20) VARS -> .
    (16) Atrib_var -> . ID = Exp
    (17) Atrib_arr -> . ID [ Exp ] = Exp
    (21) Decl -> . VAR IdList ;
    (22) Decl -> . ARR ID [ NUM ] ;

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 3 (Cmds -> .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ARR resolved as shift
    $end            reduce using rule 3 (Cmds -> .)
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 17
    VAR             shift and go to state 21
    ARR             shift and go to state 22

  ! IF              [ reduce using rule 20 (VARS -> .) ]
  ! WHILE           [ reduce using rule 20 (VARS -> .) ]
  ! FOR             [ reduce using rule 20 (VARS -> .) ]
  ! PRINT           [ reduce using rule 20 (VARS -> .) ]
  ! INPUT           [ reduce using rule 20 (VARS -> .) ]
  ! ID              [ reduce using rule 20 (VARS -> .) ]
  ! VAR             [ reduce using rule 20 (VARS -> .) ]
  ! ARR             [ reduce using rule 20 (VARS -> .) ]
  ! $end            [ reduce using rule 20 (VARS -> .) ]

    Init                           shift and go to state 1
    Cmds                           shift and go to state 2
    Cmd                            shift and go to state 3
    Cmd_If                         shift and go to state 4
    Cmd_If_Else                    shift and go to state 5
    Cmd_While                      shift and go to state 6
    Cmd_For                        shift and go to state 7
    Cmd_Write                      shift and go to state 8
    Cmd_Read                       shift and go to state 9
    Atrib                          shift and go to state 10
    VARS                           shift and go to state 11
    Atrib_var                      shift and go to state 18
    Atrib_arr                      shift and go to state 19
    Decl                           shift and go to state 20

state 1

    (0) S' -> Init .



state 2

    (1) Init -> Cmds .

    $end            reduce using rule 1 (Init -> Cmds .)


state 3

    (2) Cmds -> Cmd . Cmds
    (2) Cmds -> . Cmd Cmds
    (3) Cmds -> .
    (4) Cmd -> . Cmd_If
    (5) Cmd -> . Cmd_If_Else
    (6) Cmd -> . Cmd_While
    (7) Cmd -> . Cmd_For
    (8) Cmd -> . Cmd_Write
    (12) Cmd -> . Cmd_Read
    (13) Cmd -> . Atrib ;
    (18) Cmd -> . VARS
    (25) Cmd_If -> . IF ( Cond ) THEN { Cmds }
    (26) Cmd_If_Else -> . IF ( Cond ) THEN { Cmds } ELSE { Cmds }
    (27) Cmd_While -> . WHILE ( Cond ) DO { Cmds }
    (28) Cmd_For -> . FOR ( Atrib ; Cond ; Atrib ) DO { Cmds }
    (9) Cmd_Write -> . PRINT ( Exp )
    (10) Cmd_Read -> . INPUT ( ID )
    (11) Cmd_Read -> . INPUT ( ID [ Exp ] )
    (14) Atrib -> . Atrib_var
    (15) Atrib -> . Atrib_arr
    (19) VARS -> . Decl VARS
    (20) VARS -> .
    (16) Atrib_var -> . ID = Exp
    (17) Atrib_arr -> . ID [ Exp ] = Exp
    (21) Decl -> . VAR IdList ;
    (22) Decl -> . ARR ID [ NUM ] ;

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 3 (Cmds -> .)
  ! reduce/reduce conflict for } resolved using rule 3 (Cmds -> .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ARR resolved as shift
    $end            reduce using rule 3 (Cmds -> .)
    }               reduce using rule 3 (Cmds -> .)
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 17
    VAR             shift and go to state 21
    ARR             shift and go to state 22

  ! IF              [ reduce using rule 20 (VARS -> .) ]
  ! WHILE           [ reduce using rule 20 (VARS -> .) ]
  ! FOR             [ reduce using rule 20 (VARS -> .) ]
  ! PRINT           [ reduce using rule 20 (VARS -> .) ]
  ! INPUT           [ reduce using rule 20 (VARS -> .) ]
  ! ID              [ reduce using rule 20 (VARS -> .) ]
  ! VAR             [ reduce using rule 20 (VARS -> .) ]
  ! ARR             [ reduce using rule 20 (VARS -> .) ]
  ! $end            [ reduce using rule 20 (VARS -> .) ]
  ! }               [ reduce using rule 20 (VARS -> .) ]

    Cmd                            shift and go to state 3
    Cmds                           shift and go to state 23
    Cmd_If                         shift and go to state 4
    Cmd_If_Else                    shift and go to state 5
    Cmd_While                      shift and go to state 6
    Cmd_For                        shift and go to state 7
    Cmd_Write                      shift and go to state 8
    Cmd_Read                       shift and go to state 9
    Atrib                          shift and go to state 10
    VARS                           shift and go to state 11
    Atrib_var                      shift and go to state 18
    Atrib_arr                      shift and go to state 19
    Decl                           shift and go to state 20

state 4

    (4) Cmd -> Cmd_If .

    IF              reduce using rule 4 (Cmd -> Cmd_If .)
    WHILE           reduce using rule 4 (Cmd -> Cmd_If .)
    FOR             reduce using rule 4 (Cmd -> Cmd_If .)
    PRINT           reduce using rule 4 (Cmd -> Cmd_If .)
    INPUT           reduce using rule 4 (Cmd -> Cmd_If .)
    ID              reduce using rule 4 (Cmd -> Cmd_If .)
    VAR             reduce using rule 4 (Cmd -> Cmd_If .)
    ARR             reduce using rule 4 (Cmd -> Cmd_If .)
    $end            reduce using rule 4 (Cmd -> Cmd_If .)
    }               reduce using rule 4 (Cmd -> Cmd_If .)


state 5

    (5) Cmd -> Cmd_If_Else .

    IF              reduce using rule 5 (Cmd -> Cmd_If_Else .)
    WHILE           reduce using rule 5 (Cmd -> Cmd_If_Else .)
    FOR             reduce using rule 5 (Cmd -> Cmd_If_Else .)
    PRINT           reduce using rule 5 (Cmd -> Cmd_If_Else .)
    INPUT           reduce using rule 5 (Cmd -> Cmd_If_Else .)
    ID              reduce using rule 5 (Cmd -> Cmd_If_Else .)
    VAR             reduce using rule 5 (Cmd -> Cmd_If_Else .)
    ARR             reduce using rule 5 (Cmd -> Cmd_If_Else .)
    $end            reduce using rule 5 (Cmd -> Cmd_If_Else .)
    }               reduce using rule 5 (Cmd -> Cmd_If_Else .)


state 6

    (6) Cmd -> Cmd_While .

    IF              reduce using rule 6 (Cmd -> Cmd_While .)
    WHILE           reduce using rule 6 (Cmd -> Cmd_While .)
    FOR             reduce using rule 6 (Cmd -> Cmd_While .)
    PRINT           reduce using rule 6 (Cmd -> Cmd_While .)
    INPUT           reduce using rule 6 (Cmd -> Cmd_While .)
    ID              reduce using rule 6 (Cmd -> Cmd_While .)
    VAR             reduce using rule 6 (Cmd -> Cmd_While .)
    ARR             reduce using rule 6 (Cmd -> Cmd_While .)
    $end            reduce using rule 6 (Cmd -> Cmd_While .)
    }               reduce using rule 6 (Cmd -> Cmd_While .)


state 7

    (7) Cmd -> Cmd_For .

    IF              reduce using rule 7 (Cmd -> Cmd_For .)
    WHILE           reduce using rule 7 (Cmd -> Cmd_For .)
    FOR             reduce using rule 7 (Cmd -> Cmd_For .)
    PRINT           reduce using rule 7 (Cmd -> Cmd_For .)
    INPUT           reduce using rule 7 (Cmd -> Cmd_For .)
    ID              reduce using rule 7 (Cmd -> Cmd_For .)
    VAR             reduce using rule 7 (Cmd -> Cmd_For .)
    ARR             reduce using rule 7 (Cmd -> Cmd_For .)
    $end            reduce using rule 7 (Cmd -> Cmd_For .)
    }               reduce using rule 7 (Cmd -> Cmd_For .)


state 8

    (8) Cmd -> Cmd_Write .

    IF              reduce using rule 8 (Cmd -> Cmd_Write .)
    WHILE           reduce using rule 8 (Cmd -> Cmd_Write .)
    FOR             reduce using rule 8 (Cmd -> Cmd_Write .)
    PRINT           reduce using rule 8 (Cmd -> Cmd_Write .)
    INPUT           reduce using rule 8 (Cmd -> Cmd_Write .)
    ID              reduce using rule 8 (Cmd -> Cmd_Write .)
    VAR             reduce using rule 8 (Cmd -> Cmd_Write .)
    ARR             reduce using rule 8 (Cmd -> Cmd_Write .)
    $end            reduce using rule 8 (Cmd -> Cmd_Write .)
    }               reduce using rule 8 (Cmd -> Cmd_Write .)


state 9

    (12) Cmd -> Cmd_Read .

    IF              reduce using rule 12 (Cmd -> Cmd_Read .)
    WHILE           reduce using rule 12 (Cmd -> Cmd_Read .)
    FOR             reduce using rule 12 (Cmd -> Cmd_Read .)
    PRINT           reduce using rule 12 (Cmd -> Cmd_Read .)
    INPUT           reduce using rule 12 (Cmd -> Cmd_Read .)
    ID              reduce using rule 12 (Cmd -> Cmd_Read .)
    VAR             reduce using rule 12 (Cmd -> Cmd_Read .)
    ARR             reduce using rule 12 (Cmd -> Cmd_Read .)
    $end            reduce using rule 12 (Cmd -> Cmd_Read .)
    }               reduce using rule 12 (Cmd -> Cmd_Read .)


state 10

    (13) Cmd -> Atrib . ;

    ;               shift and go to state 24


state 11

    (18) Cmd -> VARS .

    IF              reduce using rule 18 (Cmd -> VARS .)
    WHILE           reduce using rule 18 (Cmd -> VARS .)
    FOR             reduce using rule 18 (Cmd -> VARS .)
    PRINT           reduce using rule 18 (Cmd -> VARS .)
    INPUT           reduce using rule 18 (Cmd -> VARS .)
    ID              reduce using rule 18 (Cmd -> VARS .)
    VAR             reduce using rule 18 (Cmd -> VARS .)
    ARR             reduce using rule 18 (Cmd -> VARS .)
    $end            reduce using rule 18 (Cmd -> VARS .)
    }               reduce using rule 18 (Cmd -> VARS .)


state 12

    (25) Cmd_If -> IF . ( Cond ) THEN { Cmds }
    (26) Cmd_If_Else -> IF . ( Cond ) THEN { Cmds } ELSE { Cmds }

    (               shift and go to state 25


state 13

    (27) Cmd_While -> WHILE . ( Cond ) DO { Cmds }

    (               shift and go to state 26


state 14

    (28) Cmd_For -> FOR . ( Atrib ; Cond ; Atrib ) DO { Cmds }

    (               shift and go to state 27


state 15

    (9) Cmd_Write -> PRINT . ( Exp )

    (               shift and go to state 28


state 16

    (10) Cmd_Read -> INPUT . ( ID )
    (11) Cmd_Read -> INPUT . ( ID [ Exp ] )

    (               shift and go to state 29


state 17

    (16) Atrib_var -> ID . = Exp
    (17) Atrib_arr -> ID . [ Exp ] = Exp

    =               shift and go to state 30
    [               shift and go to state 31


state 18

    (14) Atrib -> Atrib_var .

    ;               reduce using rule 14 (Atrib -> Atrib_var .)
    )               reduce using rule 14 (Atrib -> Atrib_var .)


state 19

    (15) Atrib -> Atrib_arr .

    ;               reduce using rule 15 (Atrib -> Atrib_arr .)
    )               reduce using rule 15 (Atrib -> Atrib_arr .)


state 20

    (19) VARS -> Decl . VARS
    (19) VARS -> . Decl VARS
    (20) VARS -> .
    (21) Decl -> . VAR IdList ;
    (22) Decl -> . ARR ID [ NUM ] ;

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ARR resolved as shift
    IF              reduce using rule 20 (VARS -> .)
    WHILE           reduce using rule 20 (VARS -> .)
    FOR             reduce using rule 20 (VARS -> .)
    PRINT           reduce using rule 20 (VARS -> .)
    INPUT           reduce using rule 20 (VARS -> .)
    ID              reduce using rule 20 (VARS -> .)
    $end            reduce using rule 20 (VARS -> .)
    }               reduce using rule 20 (VARS -> .)
    VAR             shift and go to state 21
    ARR             shift and go to state 22

  ! VAR             [ reduce using rule 20 (VARS -> .) ]
  ! ARR             [ reduce using rule 20 (VARS -> .) ]

    Decl                           shift and go to state 20
    VARS                           shift and go to state 32

state 21

    (21) Decl -> VAR . IdList ;
    (23) IdList -> . ID
    (24) IdList -> . ID , IdList

    ID              shift and go to state 34

    IdList                         shift and go to state 33

state 22

    (22) Decl -> ARR . ID [ NUM ] ;

    ID              shift and go to state 35


state 23

    (2) Cmds -> Cmd Cmds .

    $end            reduce using rule 2 (Cmds -> Cmd Cmds .)
    }               reduce using rule 2 (Cmds -> Cmd Cmds .)


state 24

    (13) Cmd -> Atrib ; .

    IF              reduce using rule 13 (Cmd -> Atrib ; .)
    WHILE           reduce using rule 13 (Cmd -> Atrib ; .)
    FOR             reduce using rule 13 (Cmd -> Atrib ; .)
    PRINT           reduce using rule 13 (Cmd -> Atrib ; .)
    INPUT           reduce using rule 13 (Cmd -> Atrib ; .)
    ID              reduce using rule 13 (Cmd -> Atrib ; .)
    VAR             reduce using rule 13 (Cmd -> Atrib ; .)
    ARR             reduce using rule 13 (Cmd -> Atrib ; .)
    $end            reduce using rule 13 (Cmd -> Atrib ; .)
    }               reduce using rule 13 (Cmd -> Atrib ; .)


state 25

    (25) Cmd_If -> IF ( . Cond ) THEN { Cmds }
    (26) Cmd_If_Else -> IF ( . Cond ) THEN { Cmds } ELSE { Cmds }
    (39) Cond -> . NOT Cond
    (40) Cond -> . Cond AND Cond
    (41) Cond -> . Cond OR Cond
    (42) Cond -> . Exp > Exp
    (43) Cond -> . Exp > = Exp
    (44) Cond -> . Exp < Exp
    (45) Cond -> . Exp < = Exp
    (46) Cond -> . Exp = = Exp
    (47) Cond -> . Exp ! = Exp
    (29) Exp -> . Exp + Exp
    (30) Exp -> . Exp - Exp
    (31) Exp -> . Exp * Exp
    (32) Exp -> . Exp / Exp
    (33) Exp -> . Exp % Exp
    (34) Exp -> . Factor
    (35) Factor -> . NUM
    (36) Factor -> . ID
    (37) Factor -> . ID [ Exp ]
    (38) Factor -> . ( Exp )

    NOT             shift and go to state 38
    NUM             shift and go to state 41
    ID              shift and go to state 42
    (               shift and go to state 36

    Cond                           shift and go to state 37
    Exp                            shift and go to state 39
    Factor                         shift and go to state 40

state 26

    (27) Cmd_While -> WHILE ( . Cond ) DO { Cmds }
    (39) Cond -> . NOT Cond
    (40) Cond -> . Cond AND Cond
    (41) Cond -> . Cond OR Cond
    (42) Cond -> . Exp > Exp
    (43) Cond -> . Exp > = Exp
    (44) Cond -> . Exp < Exp
    (45) Cond -> . Exp < = Exp
    (46) Cond -> . Exp = = Exp
    (47) Cond -> . Exp ! = Exp
    (29) Exp -> . Exp + Exp
    (30) Exp -> . Exp - Exp
    (31) Exp -> . Exp * Exp
    (32) Exp -> . Exp / Exp
    (33) Exp -> . Exp % Exp
    (34) Exp -> . Factor
    (35) Factor -> . NUM
    (36) Factor -> . ID
    (37) Factor -> . ID [ Exp ]
    (38) Factor -> . ( Exp )

    NOT             shift and go to state 38
    NUM             shift and go to state 41
    ID              shift and go to state 42
    (               shift and go to state 36

    Cond                           shift and go to state 43
    Exp                            shift and go to state 39
    Factor                         shift and go to state 40

state 27

    (28) Cmd_For -> FOR ( . Atrib ; Cond ; Atrib ) DO { Cmds }
    (14) Atrib -> . Atrib_var
    (15) Atrib -> . Atrib_arr
    (16) Atrib_var -> . ID = Exp
    (17) Atrib_arr -> . ID [ Exp ] = Exp

    ID              shift and go to state 17

    Atrib                          shift and go to state 44
    Atrib_var                      shift and go to state 18
    Atrib_arr                      shift and go to state 19

state 28

    (9) Cmd_Write -> PRINT ( . Exp )
    (29) Exp -> . Exp + Exp
    (30) Exp -> . Exp - Exp
    (31) Exp -> . Exp * Exp
    (32) Exp -> . Exp / Exp
    (33) Exp -> . Exp % Exp
    (34) Exp -> . Factor
    (35) Factor -> . NUM
    (36) Factor -> . ID
    (37) Factor -> . ID [ Exp ]
    (38) Factor -> . ( Exp )

    NUM             shift and go to state 41
    ID              shift and go to state 42
    (               shift and go to state 36

    Exp                            shift and go to state 45
    Factor                         shift and go to state 40

state 29

    (10) Cmd_Read -> INPUT ( . ID )
    (11) Cmd_Read -> INPUT ( . ID [ Exp ] )

    ID              shift and go to state 46


state 30

    (16) Atrib_var -> ID = . Exp
    (29) Exp -> . Exp + Exp
    (30) Exp -> . Exp - Exp
    (31) Exp -> . Exp * Exp
    (32) Exp -> . Exp / Exp
    (33) Exp -> . Exp % Exp
    (34) Exp -> . Factor
    (35) Factor -> . NUM
    (36) Factor -> . ID
    (37) Factor -> . ID [ Exp ]
    (38) Factor -> . ( Exp )

    NUM             shift and go to state 41
    ID              shift and go to state 42
    (               shift and go to state 36

    Exp                            shift and go to state 47
    Factor                         shift and go to state 40

state 31

    (17) Atrib_arr -> ID [ . Exp ] = Exp
    (29) Exp -> . Exp + Exp
    (30) Exp -> . Exp - Exp
    (31) Exp -> . Exp * Exp
    (32) Exp -> . Exp / Exp
    (33) Exp -> . Exp % Exp
    (34) Exp -> . Factor
    (35) Factor -> . NUM
    (36) Factor -> . ID
    (37) Factor -> . ID [ Exp ]
    (38) Factor -> . ( Exp )

    NUM             shift and go to state 41
    ID              shift and go to state 42
    (               shift and go to state 36

    Exp                            shift and go to state 48
    Factor                         shift and go to state 40

state 32

    (19) VARS -> Decl VARS .

    IF              reduce using rule 19 (VARS -> Decl VARS .)
    WHILE           reduce using rule 19 (VARS -> Decl VARS .)
    FOR             reduce using rule 19 (VARS -> Decl VARS .)
    PRINT           reduce using rule 19 (VARS -> Decl VARS .)
    INPUT           reduce using rule 19 (VARS -> Decl VARS .)
    ID              reduce using rule 19 (VARS -> Decl VARS .)
    VAR             reduce using rule 19 (VARS -> Decl VARS .)
    ARR             reduce using rule 19 (VARS -> Decl VARS .)
    $end            reduce using rule 19 (VARS -> Decl VARS .)
    }               reduce using rule 19 (VARS -> Decl VARS .)


state 33

    (21) Decl -> VAR IdList . ;

    ;               shift and go to state 49


state 34

    (23) IdList -> ID .
    (24) IdList -> ID . , IdList

    ;               reduce using rule 23 (IdList -> ID .)
    ,               shift and go to state 50


state 35

    (22) Decl -> ARR ID . [ NUM ] ;

    [               shift and go to state 51


state 36

